test/analyze/type_check/anonymous_function/return.exp
Error: Expected type `Int` but found `String`
test/analyze/type_check/anonymous_function/return.myte:22:13-15
 22 |       return "";
    |              ^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/anonymous_function/return.myte:25:15-19
 25 |         return true;
    |                ^^^^

Error: Expected type `Int` but found `() -> Int`
test/analyze/type_check/anonymous_function/return.myte:30:13-31
 30 |       return explicitUnitReturn;
    |              ^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/anonymous_function/return.myte:43:23
 43 |   fn (): Unit { return 1; };
    |                        ^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/anonymous_function/return.myte:44:17
 44 |   fn (): Unit -> 1;
    |                  ^

Error: Expected type `() -> Bool` but found `() -> Int`
test/analyze/type_check/anonymous_function/return.myte:64:3-22
 64 |   (fn () { return 1; }: () -> Bool);
    |    ^^^^^^^^^^^^^^^^^^^

Error: Expected type `() -> Bool` but found `() -> Int`
test/analyze/type_check/anonymous_function/return.myte:65:3-13
 65 |   (fn () -> 1: () -> Bool);
    |    ^^^^^^^^^^

Error: Expected type `Unit` but found `(Int) -> Bool`
test/analyze/type_check/anonymous_function/return.myte:71:3-24
 71 |   (fn (x: Int) -> x == 1: Unit);
    |    ^^^^^^^^^^^^^^^^^^^^^

Error: Cannot infer type for variable declaration. Partially inferred `(a) -> a` but was unable to resolve `a`. Please provide additional type annotations.
test/analyze/type_check/anonymous_function/return.myte:74:2-22
 74 |   val x = fn (x) -> x;
    |   ^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/anonymous_function/return.myte:86:15
 86 |         return 1;
    |                ^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/anonymous_function/return.myte:91:13-15
 91 |       return ();
    |              ^^