test/analyze/type_check/anonymous_function/return.myte
module test

fun validReturn(): Unit {
  fn (): Int {
    if (true) {
      return 1;
    } else {
      if (true) {
        return 2;
      }
    }

    {
      return 3;
    }
  };
}

fun invalidReturn(): Unit {
  fn (): Int {
    if (true) {
      return "";
    } else {
      if (true) {
        return true;
      }
    }

    {
      return explicitUnitReturn;
    }
  };
}

fun explicitUnitReturn(): Int {
  // Success
  fn (): Unit {};
  fn (): Unit { return; };
  fn (): Unit { return (); };
  fn (): Unit -> ();

  // Failure
  fn (): Unit { return 1; };
  fn (): Unit -> 1;

  return 1;
}

fun inferredUnitReturnType(): Int {
  fn () {};
  fn () { return; };
  fn () { return (); };
  fn () -> ();

  return 1;
}

fun inferredReturnType(): String {
  // Success
  fn () { return 1; };
  fn () -> 1;

  // Errors to check inferred types
  (fn () { return 1; }: () -> Bool);
  (fn () -> 1: () -> Bool);

  // Success
  (fn (x) -> x)(true);
  
  // Error to print inferred return type
  (fn (x: Int) -> x == 1: Unit);

  // Error as return type is not resolved
  val x = fn (x) -> x;
  x(true);

  return "";
}

fun nestedAnonymousFunctionReturn(): String {
  fn (): Int {
    fn (): Unit {
      if (true) {
        return ();
      } else {
        return 1;
      }
    };

    if (true) {
      return ();
    } else {
      return 1;
    }
  };

  return "";
}

fun main() {}